--- a/CompSci.html
+++ b/CompSci.html
@@ -3,14 +3,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <body>
 
-
-    {% include profile.html %}
-
-
+    {% include CompSci_pg.html %}
 
 </body>
-
 </html>
