--- a/index.html
+++ b/index.html
@@ -1,16 +1,98 @@
----
----
-<!DOCTYPE html>
-<html lang="en">
-
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<html>
+<head>
+  <title>Liam May Portfolio</title>
+ <link rel="stylesheet" href="assets/css/stylesheet.css"> 
+</head>
 <body>
 
+<container class="prof">
+  <img class="prof" src="assets/img/Liam_DP.jpg">
+  
+<!-- Sign and date the page, it's only polite! -->
+<credit class="prof"> <em>Made 30 Augaust 2021<br>
+  by Liam K. May.</em>
+</credit >
+</container>
 
-    {% _includes profile.html %}
+  
+<!-- Site navigation menu -->
+ <div class="container">
+   <ul class="navbar">
+       <li><a>
+         <!-- <div class="dl-button">
+            <form action="https://raw.githubusercontent.com/TheTriangleTrippa/Portfolio/ac819119422470eb97b80d42b2e75e590597b502/LIAM%20MAY%20CV%202020%201.pdf" method="get" target="_blank" >
+              <button class="button" style="vertical-align:middle"><span>Download My CV here!</span>
+              </button>
+            </form>
+          </div>
+         </a> -->
+              <form action="https://raw.githubusercontent.com/TheTriangleTrippa/Portfolio/26a028aae0e9d737cc7f38f5a94c80d3e23680a6/LIAM-MAY-CV.pdf" method="get" target="_blank" >
+          <button class="downloader" style="vertical-align:middle"><span>"Download My CV here!"</span>
+          </button>
+        </form>
+       </a>
+    <li><a href="index.html">Home page</a>
+    <li><a href="ProdDesign.html">Product Design</a>
+    <li><a href="CompSci.html">Computer science</a>
+       <li><a href="CompSciGraphics.html">Computer Graphics Work.</a>
+    <li><a href="links.html">My hobbies: Exibition of me.</a>
+   </ul>
+ </div>
 
+
+<!-- Main content -->
+<h1 class="title">Welcome to my portfolio!</h1>
+
+<h2 class="about_me">A bit about me:</h2>
+  
+
+  
+<p class="bio">
+  I'm a computer science and product design student graduate from University of Canterbury. 
+  I'm interested in the low end of the computer science domain, initially embarking on my life of higher
+  education to play with robots/prosthetics. I started looking at Mechatronics engineering, but quickly
+  decided that was not the route for me, moving towards a computer science and product design pathway in 
+  my intermediate year. This route has left me in a very exciting situation and I can't wait to see
+  where I end up! 
+  
+  <br><br>
+  Outside of study, I play Ice Hockey on a regular basis, and also enjoy riding dirtbikes. 
+  Online side the extreme nature, I am also creative playing guitar from a young age this has led 
+  to the part composition of an Extended Play (EP). As well as being highly involved in the fine 
+  arts of painting and design, which is am musing to develop a game, in which I am doing the 
+  concept artwork for – This is on the backburner because other priorities have taken place - 
+  but perhaps one day I will finish or meet others to join my project.</p>
+
+<h2 class="exploration">Here are some branches to Design and Computer science:</h2>
+  <p>Feel free to look at it all!</p>
+
+
+
+<div class="prod-button">     
+  <form action="https://thetriangletrippa.github.io/Portfolio/ProdDesign.html" method="get" target="_blank">
+      <button class="button" style="vertical-align:middle"><span>Product Design </span> </button>
+  </form>
+</div>
+  
+ <div class="sci-button"> 
+  <form action="https://thetriangletrippa.github.io/Portfolio/CompSci.html" method="get" target="_blank">
+    <button class="button" style="vertical-align:middle"><span>Computer Science </span></button>
+  </form>
+</div>
+
+  
+
+  <br><br> <br><br>
+  <h2> Extended study info and motives: </h2>
+   <p class="motivation"> Later in the course of my studies I completed postgraduate degree, the intent was to cross between computer science and embedded systems. 
+    This support the backing of product design, the intent was to cross to UX or the controlling of embedded systems for further development. 
+    Surrounding these postgraduate studies my specialisations became more apparent to application of embedded system, and basic understand of 
+    PCB construction and design, the underlying principles of producing and manufacturing a PCB, putting together a microcontroller in for remote 
+    controlled vehicle through IR remote and accelerometer.  This is coupled with OpenGL, and multisystem computer processing of Parallel computing, 
+    multithreading and distributed computing underlying the application of supercomputer construction and program implementation. I am capable of Machine 
+    Learning programming over Computer vision, Natural Language Programming and other Machine learning applications.</p> 
 
 
 </body>
-
 </html>
