--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </form>
        </a>
     <li><a href="index.html">Home page</a>
-    <li><a href="ProdDesign.html">Product Design</a>
+    <li><a href="_includes_ProdDesignpg.html">Product Design</a>
     <li><a href="CompSci.html">Computer science</a>
        <li><a href="CompSciGraphics.html">Computer Graphics Work.</a>
     <li><a href="links.html">My hobbies: Exibition of me.</a>
