--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 
 
 <div class="prod-button">     
-  <form action="https://thetriangletrippa.github.io/Portfolio/ProdDesign.html" method="get" target="_blank">
+  <form action="https://thetriangletrippa.github.io/test/_includes/ProdDesign_pg.html" method="get" target="_blank">
       <button class="button" style="vertical-align:middle"><span>Product Design </span> </button>
   </form>
 </div>
   
  <div class="sci-button"> 
-  <form action="https://thetriangletrippa.github.io/Portfolio/CompSci.html" method="get" target="_blank">
+  <form action="https://thetriangletrippa.github.io/test/_includes/CompSci_pg.html" method="get" target="_blank">
     <button class="button" style="vertical-align:middle"><span>Computer Science </span></button>
   </form>
 </div>
