--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
  <link rel="stylesheet" href="assets/css/stylesheet.css"> 
 </head>
 <body id="in">
+	
+
 
 <div class="frame">
-  
+
 <!-- Site navigation menu -->
 
    <ul class="navbar">
@@ -37,6 +39,7 @@
 <!-- Main content -->
 
 	<div class="image">
+		  
 	<container class="prof">
 	  <img class="prof" src="assets/img/Liam_DP.jpg">
 	  
@@ -47,6 +50,13 @@
 	</container>
 	</div>
 	<div class="inner-frame">
+		
+					<div class="center">
+	<p class="disclaimer"> Note: If your brower is not up-to-date - github will incorrectly render the page.</p>
+	 	</div>
+
+
+
 		<div class="text">
 	<h1 class="title">Welcome to my portfolio!</h1>
 
@@ -105,7 +115,7 @@
 </div>
   
  <div class="sci-button"> 
-  <form href="./_includes/CompSci_pg.html" method="get" target="_self">
+  <form action="./_includes/CompSci_pg.html" method="get" target="_self">
     <button class="button" style="vertical-align:middle"><span>Computer Science </span></button>
   </form>
   
@@ -127,5 +137,8 @@
 
 	</div>
 </div>
+
+
+
 </body>
 </html>
