format fix compSci

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ My hobbies: Exhibion of me</span>
 	<div class="image">
 		  
 	<container class="prof">
-	  <img class="prof" src="assets/img/Liam_DP.jpg">
+	  <img class="prof" src="./assets/img/Liam_DP.jpg">
 	  
 	<!-- Sign and date the page, it's only polite! -->
 	<credit class="prof"> Christchurch, New Zealand <br> Date of Birth: 26/03/1995 <br> Qualificatinos from the <br>University of Canterbury: <br>Postgraduate Diploma  of Computer Science  <br> Bachelor of Industrial Product Design  <br> Bachelor of Computer Science  <br> <em>Made 30 Augaust 2021<br>
