added newer content for weta

--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@ My hobbies: Exhibion of me</span>
 	  <img class="prof" src="./assets/img/Liam_DP.jpg">
 	  
 	<!-- Sign and date the page, it's only polite! -->
-	<credit class="prof"> Christchurch, New Zealand <br> Date of Birth: 26/03/1995 <br> Qualificatinos from the <br>University of Canterbury: <br>Postgraduate Diploma  of Computer Science  <br> Bachelor of Industrial Product Design  <br> Bachelor of Computer Science  <br> <em>Made 30 Augaust 2021<br>
-	  by Liam K. May.</em>
+	<credit class="prof"><br> Christchurch, New Zealand <br> Date of Birth: 26/03/1995 <br> Qualificatinos from the <br>University of Canterbury: <br>Postgraduate Diploma  of Computer Science  <br> Bachelor of Industrial Product Design  <br> Bachelor of Computer Science  <br> 
 	</credit >
 	</container>
+	
 	</div>
 	<div class="inner-frame">
 		
 					<div class="center">
-	<p class="disclaimer"> Note: If your brower is not up-to-date - github will incorrectly render the page.</p>
+	<p class="disclaimer"> Note: If your brower is not up-to-date github will incorrectly render the page.</p>
 	 	</div>
 
 
@@ -177,6 +177,11 @@ My hobbies: Exhibion of me</span>
 </div>
 
 
+<div class='frame'>
+<address class="site_signing"> <em>Made 30 Augaust 2021<br>
+	  by Liam K. May.</em>
+	  </address>
+  </div>
 
 </body>
 </html>
