made collapasble prodesign added weta content

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ My hobbies: Exhibion of me</span>
 
 <div class='frame'>
 <address class="site_signing"> <em>Updated 4 April 2024<br>
-	  by Liam K. May.</em>
+	  Made by Liam K. May.</em>
 	  </address>
   </div>
 
