--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@ Computer Graphics Work</span>
 
         
                              <li><div class="nav-button"> 
-         <form action="_includes/links_pg.html" method="get" target="_self" >
+         <form action="index.html" method="get" target="_self" >
           <button class="nav-button" >  <span><image   src="./assets/icon/hobbies.svg" /><br>
-My hobbies: Exhibion of me</span>
+My hobbies: Exhibition of me</span>
           </button>
         </form></div>
         
