plugin browser disclaimer update

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ My hobbies: Exhibition of me</span>
 	<div class="inner-frame">
 		
 					<div class="center">
-            <p class="disclaimer"> Note: If your brower is not up-to-date github will incorrectly render the page. Plugins work best on Firefox!</p>
+            <p class="disclaimer"> Note: If your brower is not up-to-date github will incorrectly render the page. Plugins might load differently between browsers!</p>
 	 	</div>
 
 
