--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ My hobbies: Exhibition of me</span>
   Through Computer science I looked heavily into embedded systems - the raw programming and layout of a PCB - Deep/Machine Learning alongside UX, IoT (including mixed reality) and computer graphics for Python and C languages.
   <p class="motivation">
 
-    Later in the course of my studies I completed a postgraduate diploma. This has left a window open for me to potentially continue on to get my<em> masters</em> after the thesis competition of a thesis. 
+    Later in the course of my studies I completed a postgraduate diploma. This has left a window open for me to potentially continue on to get my<em> masters</em> after the competition of a thesis. 
       </p><p class="motivation"> 
     
     The intent behind my postgraduate specialisation was to cross computer science and embedded systems -  this is aso support  and with the backing of product design - revenues to cross with UX and applications of embedded systems for further development of <em>IoT and robotic/automated systems.</em>
