updated first page - too long?

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ My hobbies: Exhibition of me</span>
 		  but perhaps one day I will finish or meet others to join my project.</p>
 
 
-<h2 >Here are some branches to Design and Computer science:</h2>
+<h2 >Here are some branches to Design and Computer Science:</h2>
   <p>Feel free to look at it all!</p>
   
 <!--
