about me update minior

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ My hobbies: Exhibition of me</span>
 		<h2 class="about_me">A bit about me:</h2>
 		  
 		<p class="bio">
-		  I'm a computer science and product design student graduate from University of Canterbury. 
+		  I'm a computer science and product design graduate from University of Canterbury. <br><br>
 		  I'm interested in the low end of the computer science and Product Design domains, initially embarking on my life of higher
 		  education to play with robots/prosthetics. I started looking at Mechatronics engineering, but quickly
 		  decided that was not the route for me, moving towards a computer science and product design pathway in 
